--- a/src/main/webapp/pages/protocolo/edit.xhtml
+++ b/src/main/webapp/pages/protocolo/edit.xhtml
@@ -278,6 +278,8 @@
                                                                           headerText="#{protocoloCtrl.item.origem.nivel eq 'SECRETARIA' ? 'Conselho/Prestador' : 'Convênio/Atendimento'}"
                                                                           sortBy="#{doc.consPrestConv}"
                                                                           styleClass="left-align ellipsis-text"/>
+                                                                <p:column width="100" headerText="Pendências"
+                                                                          rendered="#{protocoloCtrl.item.origem.nivel eq 'PRONTO_SOCORRO'}"/>
                                                                 <p:column id="referenciaNaoRelac"
                                                                           headerText="Referência"
                                                                           sortBy="#{doc.dataReferencia}"
@@ -294,7 +296,10 @@
                                                                           styleClass="left-align"
                                                                           width="90"/>
                                                                 <p:column styleClass="center-align" width="100"
-                                                                          rendered="#{protocoloCtrl.item.origem.nivel eq 'PRONTO_SOCORRO'}"/>
+                                                                          rendered="#{protocoloCtrl.item.origem.nivel eq 'PRONTO_SOCORRO'
+                                                                  and protocoloCtrl.editing
+                                                                  and (protocoloCtrl.item.estado eq 'RASCUNHO'
+                                                                  or protocoloCtrl.item.estado eq 'RECUSADO')}"/>
                                                             </p:row>
                                                         </p:columnGroup>
                                                         <p:column style="text-align: center;">
@@ -306,12 +311,15 @@
                                                         </p:column>
                                                         <p:column>
                                                             <h:panelGroup rendered="#{doc.tipo eq 'PROTOCOLO'}">
+                                                                <h:outputText value="#{doc.descricao}"
+                                                                              rendered="#{doc.filho.estado eq 'PRONTO_SOCORRO'}"/>
                                                                 <p:commandButton icon="fa fa-eye"
                                                                                  value="#{doc.descricao}"
                                                                                  action="#{protocoloCtrl.visualizarDoc(doc)}"
                                                                                  onclick="openLoading();"
                                                                                  oncomplete="closeLoading(); PF('documentosDlg').show();"
                                                                                  process="@this"
+                                                                                 rendered="#{doc.filho.estado ne 'PRONTO_SOCORRO'}"
                                                                                  update="#{p:component('documentosDlgPnl')}"/>
                                                             </h:panelGroup>
                                                             <h:panelGroup rendered="#{doc.tipo ne 'PROTOCOLO'}">
@@ -331,6 +339,11 @@
                                                                          value="#{doc.consPrestConv}"
                                                                          index="#{idx}"/>
                                                         </p:column>
+                                                        <p:column style="text-align: center;"
+                                                                  rendered="#{protocoloCtrl.item.origem.nivel eq 'PRONTO_SOCORRO'}">
+                                                            <h:panelGroup styleClass="fa fa-warning"
+                                                                          rendered="#{doc.itemProtocolo.filho.comPendencias}"/>
+                                                        </p:column>
                                                         <p:column rendered="#{protocoloCtrl.isSecretaria()}">
                                                             <h:outputText value="#{doc.dataReferencia}">
                                                                 <f:convertDateTime pattern="dd/MM/yy" locale="pt_BR"/>
@@ -349,13 +362,17 @@
                                                             </h:outputText>
                                                         </p:column>
                                                         <p:column style="text-align: center;"
-                                                                  rendered="#{protocoloCtrl.item.origem.nivel eq 'PRONTO_SOCORRO'}">
+                                                                  rendered="#{protocoloCtrl.item.origem.nivel eq 'PRONTO_SOCORRO'
+                                                                  and protocoloCtrl.editing
+                                                                  and (protocoloCtrl.item.estado eq 'RASCUNHO'
+                                                                  or protocoloCtrl.item.estado eq 'RECUSADO')}">
                                                             <p:menuButton id="menuButton" value="Ações">
                                                                 <p:menuitem value="Selecionar Docs."
                                                                             icon="fa fa-asterisk" ajax="true"
                                                                             action="#{protocoloCtrl.preSelecionarDocumentosPS(doc)}"
                                                                             process="@this"
-                                                                            update="#{p:component('selecionarDocsPSDlgPnl')}"/>
+                                                                            update="#{p:component('selecionarDocsPSDlgPnl')}"
+                                                                            oncomplete="PF('selecionarDocsPSDlg').show();"/>
                                                                 <p:menuitem value="Incluir Doc. Manual"
                                                                             icon="fa fa-file-text"
                                                                             action="#{protocoloCtrl.preAddDocManualPS(doc)}"
@@ -363,12 +380,6 @@
                                                                             rendered="#{protocoloCtrl.editing}"
                                                                             update="#{p:component('docManualPSDlgPnl')}"
                                                                             oncomplete="PF('docManualPSDlg').show()"/>
-                                                                <p:menuitem value="Assinalar Pendências"
-                                                                            icon="fa fa-warning" ajax="true"
-                                                                            action="#{protocoloCtrl.preAssinalarPendencias(doc)}"
-                                                                            process="@this"
-                                                                            update="#{p:component('assinalarPendenciasDlgPnl')}"
-                                                                            oncomplete="PF('assinalarPendenciasDlg').show()"/>
                                                             </p:menuButton>
                                                         </p:column>
                                                     </p:dataTable>
@@ -721,7 +732,7 @@
             <h:panelGroup id="selecionarDocsPSDlgPnl">
                 <p:dialog id="selecionarDocsPSDlg" widgetVar="selecionarDocsPSDlg" width="1024" modal="true"
                           position="top"
-                          rendered="#{protocoloCtrl.showSelecionarDocsPSDlg}" visible="true">
+                          rendered="#{protocoloCtrl.showSelecionarDocsPSDlg}">
                     <f:facet name="header">
                         <h:outputText
                                 value="Atendimento Nº. #{protocoloCtrl.protocoloPS.atendimento.id} | Documentos | "/>
@@ -814,6 +825,7 @@
                                     <h:outputText value="#{doc.codigo}"/>
                                 </p:column>
                                 <p:column>
+                                    <h:outputText value="TESTE"/>
                                     <h:panelGroup rendered="#{doc.tipo eq 'PROTOCOLO'}">
                                         <p:commandButton icon="fa fa-eye"
                                                          value="#{doc.descricao}"
@@ -865,7 +877,7 @@
                         <p:commandButton value="Fechar" action="#{protocoloCtrl.fecharSelecionarPSDlg}"
                                          onclick="PF('selecionarDocsPSDlg').hide();"
                                          process="@this"
-                                         update="selecionarDocsPSDlgPnl"/>
+                                         update="selecionarDocsPSDlgPnl docNaoSelecTab"/>
                         <p:commandButton value="Marcar Todos"
                                          icon="fa fa-check-square-o"
                                          ajax="true"
@@ -942,46 +954,6 @@
                                          onclick="PF('docManualPSDlg').hide();"
                                          process="@this"/>
                     </f:facet>
-                </p:dialog>
-            </h:panelGroup>
-
-            <h:panelGroup id="assinalarPendenciasDlgPnl">
-                <p:dialog id="assinalarPendenciasDlg" widgetVar="assinalarPendenciasDlg" modal="true" width="600"
-                          rendered="#{protocoloCtrl.showAssinalarPendenciasDlg}">
-                    <f:facet name="header">
-                        <h:outputText
-                                value="Assinalar Pendências - Atendimento Nº. #{protocoloCtrl.documentosKeyMapPS.ctrl.item.atendimento.id}"/>
-                    </f:facet>
-                    <h:panelGrid columns="2">
-                        <p:outputLabel for="docPendente" value="Com Pendências: "/>
-                        <p:selectBooleanCheckbox id="docPendente" value="#{protocoloCtrl.documentosKeyMapPS.ctrl.item.comPendencias}">
-                            <p:ajax event="change" process="@this"/>
-                        </p:selectBooleanCheckbox>
-                        <p:outputLabel for="docText" value="Documentos: "/>
-                        <h:panelGroup layout="block" style="vertical-align: middle;">
-                            <p:selectOneMenu id="docText" value="#{protocoloCtrl.documentosKeyMapPS.ctrl.docText}">
-                                <f:selectItems value="#{protocoloCtrl.docsCombo}"/>
-                            </p:selectOneMenu>
-                            <p:commandLink action="#{protocoloCtrl.documentosKeyMapPS.ctrl.addDocPendente}"
-                                             process="@this docText"
-                                             update="docsPendentes"
-                                             style="margin-left: 5px; vertical-align: top; font-size: 25px;"><span class="fa fa-plus"/></p:commandLink>
-                            <p:commandLink action="#{protocoloCtrl.documentosKeyMapPS.ctrl.removeDocPendente}"
-                                             process="@this docText"
-                                             update="docsPendentes"
-                                             style="margin-left: 5px; vertical-align: top; font-size: 25px;"><span class="fa fa-minus"/></p:commandLink>
-                        </h:panelGroup>
-                        <p:outputLabel value="Docs. Pendentes"/>
-                        <h:panelGroup id="docsPendentes">
-                            <h:outputText value="#{protocoloCtrl.documentosKeyMapPS.ctrl.item.docsPendentes}"
-                                          style="font-weight: bold;"
-                                          escape="true"
-                                          rendered="#{not empty protocoloCtrl.documentosKeyMapPS.ctrl.item.docsPendentes}"/>
-                            <h:outputText value="Sem itens"
-                                          style="font-weight: bold;"
-                                          rendered="#{empty protocoloCtrl.documentosKeyMapPS.ctrl.item.docsPendentes}"/>
-                        </h:panelGroup>
-                    </h:panelGrid>
                 </p:dialog>
             </h:panelGroup>
 
